python/test-data/testTypesDict4.err
Traceback (most recent call last):
  File "test-data/testTypesDict4.py", line 14, in <module>
    bar({'y': func})  # error
  File "test-data/testTypesDict4.py", line 11, in bar
    return foo(d)
  File "test-data/testTypesDict4.py", line 7, in foo
    res.append(f())
WyppTypeError: dict_items is not an Iterable[tuple[str, Callable[[], str]]]
given:    dict_items([('y', <function <lambda> at 0x00>), ('x', <untypy.impl.callable.TypedCallable object at 0x00>)])
expected: value of type Iterable[tuple[str, Callable[[], str]]]

context: foo(d: dict[str, Callable[[], str]]) -> list[str]
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
declared at: test-data/testTypesDict4.py:3
caused by: test-data/testTypesDict4.py:11
  |     return foo(d)
